tests/ui/impl-trait/impl-fn-hrtb-bounds-2.stderr
error[E0720]: cannot resolve opaque type
  --> $DIR/impl-fn-hrtb-bounds-2.rs:4:27
   |
LL | fn a() -> impl Fn(&u8) -> impl Debug {
   |                           ^^^^^^^^^^ cannot resolve opaque type

error: aborting due to previous error

For more information about this error, try `rustc --explain E0720`.
